--- a/samples/demos/res/values/strings.xml
+++ b/samples/demos/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">AndroidTest</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="skip">skip</string>
 
 </resources>
